<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fluval</string>
    <string name="app_build_version">Build Version 1.1.1</string>
    <string name="action_settings">Settings</string>
    <string name="frag_light_title">Lights Settings</string>
    <string name="menu_lights">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="automatic_mode">Automatic Mode</string>
    <string name="dialog_new_password_title">New Password</string>
    <string name="dialog_new_password_desc">Please enter a new Login Password.</string>
    <string name="dialog_rename_gateway_title">Rename Gateway</string>
    <string name="dialog_rename_gateway_desc">Please enter a new name for this connected gateway.</string>
    <string name="dialog_rename_gateway_rename_button">Rename</string>
    <string name="channel_time_settings_desc_sunrise">Program Sunrise Schedule.</string>
    <string name="channel_time_settings_desc_break">Please specify the time for the break.</string>
    <string name="channel_time_settings_desc_sunset">Please specify the time in which the sun shall set.</string>
    <string name="channel_time_settings_targetValue">Target Brightness</string>
    <string name="channel_time_settings_buttonSave">Save</string>
    <string name="choose_channel_product">Model</string>
    <string name="choose_channel_item">Channels</string>
    <string name="direct_control_title">Direct control</string>
    <string name="direct_control_luminosity">Luminosity</string>
    <string name="direct_control_buttonOn">On</string>
    <string name="direct_control_buttonOff">Off</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_reset_gateway">Reset to factory defaults</string>
    <string name="settings_rename_gateway">Re-name WiFi device</string>
    <string name="channel_main_sunrise">Sunrise</string>
    <string name="channel_main_break">Break</string>
    <string name="channel_main_sunset">Sunset</string>
    <string name="channel_main_night">Night</string>
    <string name="new_light_title">New light</string>
     <string name="dialog_reset_gateway">Gateway reset</string>
     <string name="light">Leuchte</string>
     <string name="delete">delete</string>
     <string name="deleteme">delete</string>
     <string name="cloud_effect">Cloud Effect</string>
     <string name="Channel">Channel:</string>
     <string name="gateway_error">The connection to the gateway was interrupted...\n\n Application will be closed...</string>
	<string name="gateway_error2">Connection to the gateway could not be established.\nApp is now closed ...</string>
    <string name="time_validate_1">[Start Time] is greater than [Stop Time]...</string>
    <string name="time_validate_2">Stop time [Sunrise] is greater than start time [Pause]... </string>
    <string name="time_validate_3">[Start Time] is greater than [Stop Time]...</string>
    <string name="time_validate_4">Start time [Delay] is less than Stop time [Sunrise]...</string>
    <string name="time_validate_5">Stop Zeit [Pause] ist grösser als Start Zeit [Sonnenuntergang]...</string>
    <string name="time_validate_6">Stop Time [Delay] is greater than start time [Sunset]...</string>
    <string name="time_validate_7">Start time [sunset] is less than Stop time [Pause]...</string>
    <string name="time_validate_8">Stop time [sunset] is greater than start time [Sunrise]...</string>
    <string name="time_validate_9">Stop time [Break] musst greater than start time [Break]...</string>
    <string name="wrong_wifi">Device WiFi is not connected.....</string>
    <string name="time_validate_10">Start Time  may not be the same as stop time ...</string>
    <string name="value_validate_1">The Sunrise value must greater that Sunset value</string>
       <string name="time_validate_11">Start Time [Sunset] musst greater than Start Time [Sunrise]...</string>
    <string name="login_button">Login</string>
    <string name="gateway_port">Port1/Port2</string>
    <string name="automatic_mode_off">Off</string>
    <string name="automatic_mode_on">On</string>
    <string name="wifi_info">Wifi Login</string>
    <string name="name">Name</string>
    <string name="channel_time_settings_channel">Channel</string>
    <string name="ch1_desc">Ch1</string>
    <string name="ch2_desc">Ch2</string>

</resources>
