<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/HellBlue" >

            <TextView
                android:id="@+id/textViewChannelTimeSettingsMainLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/menu_settings"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/btnChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/shape_button_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/textViewSettingsMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/settings_change_password"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn2ResetGateway"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/shape_button_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/settings_reset_gateway"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnRenameGateway"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/shape_button_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/TextViewSunriseTimeInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/settings_rename_gateway"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8"
                    android:background="@drawable/shape_button_selector"
                    android:visibility="visible" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/cloud_effect"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/cloud" />

                    <Switch
                        android:id="@+id/switchCloud"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/TextView01" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5" >

                    <TextView
                        android:id="@+id/textViewTimeField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/app_build_version"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <Button
                        android:id="@+id/buttonTcpLogger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="Dev Tcp Logger"
                        android:visibility="invisible" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
