<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_button_selector" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/HellBlue" >

            <TextView
                android:id="@+id/textViewChannelTimeSettingsMainLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Tageszeit"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageViewBackToChannelMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitStart"
                android:src="@drawable/backbutton" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_weight="0.9"
                    android:background="@drawable/blue_round_rectagle" >

                    <TextView
                        android:id="@+id/textViewChannelDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="Desc"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/HellBlue" >

                    <TextView
                        android:id="@+id/textViewDirectLightPower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/Channel"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/textViewChannelTimeSettingsChannel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textViewDirectLightPower"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:text="00"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnChannelTimeSettingsSetStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_selector" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="Start"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewChannelTimeSettingsStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView3"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:text="08:00 h"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnChannelTimeSettingsSetStopTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_selector" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="End:"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewChannelTimeSettingsStopTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView4"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:text="08:30 h"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="0.9"
                    android:background="@color/HellBlue" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/channel_time_settings_targetValue"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/HellBlue" >

                        <SeekBar
                            android:id="@+id/seekBarChannelTimeSettingsLightValue"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:max="100"
                            android:maxHeight="10dp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/textViewChannelTimeSettingsLightValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout1"
                        android:layout_centerHorizontal="true"
                        android:text="99%"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnChannelTimeSettingsSaveTimeData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_selector" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/channel_time_settings_buttonSave"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
            
